--- a/react-app/package.json
+++ b/react-app/package.json
@@ -9,6 +9,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-parallax-tilt": "^1.7.68",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
     "swiper": "^8.4.4",
